--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 h1 {
   font-size: 24px;
-  padding-left: 16px;
-  border-left: 8px solid pink;
+  padding-bottom: 8px;
+  border-bottom: 1px solid #ddd;
 }
